[package]
name = "libenclave-tools"
description = "Tools for building and linking enclaves using libenclave"
version = "0.1.4"
authors = ["Jethro Beekman <jethro@jbeekman.nl>"]
license = "GPL-2.0+"
repository = "https://github.com/jethrogb/sgx-utils/tree/master/libenclave-tools"

[[bin]]
name = "libenclave-elf2sgxs"
path = "src/elf2sgxs.rs"

[[bin]]
name = "cargo-build-enclave"
path = "src/cargo-build-enclave.rs"

[dependencies]
sgxs = { path = "../sgxs" }
sgx-isa = "0.1.0"
libc = "=0.2"             # MIT/Apache-2.0
xmas-elf = "=0.3"         # Apache-2.0/MIT
rustc-serialize = "=0.3" # MIT/Apache-2.0
num = "=0.1"             # MIT/Apache-2.0
rand = "=0.4"
bitflags = "=1.0"
atty = "=0.2.6"
clap = "=2.21.1"             # MIT
unicode-segmentation = "=1.2.0"
